# ds340w

./: .gitignore  .gitmodules  README.md  pyproject.toml
SVRP/: main.py
SVRP/checkpoints/: model_epoch_100_baseline.pt  model_epoch_100_policy.pt  model_epoch_20_baseline.pt  model_epoch_20_policy.pt  model_epoch_40_baseline.pt  model_epoch_40_policy.pt  model_epoch_60_baseline.pt  model_epoch_60_policy.pt  model_epoch_80_baseline.pt  model_epoch_80_policy.pt  model_final_baseline.pt  model_final_policy.pt  svrp_log.txt
data/raw/: kontur_population_PR_20231101.gpkg
ds340w/: load_data.py
notebooks/: eda1.ipynb
src/data/: load_data.py  traintestval.py
src/ds340w/data/: load_data.py
