[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ds340w"
version = "0.1.0"
description = "DS340W project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "osmnx",
    "geopandas",
    "pandas",
    "scikit-learn",
    "spopt",
    "pyprojroot",
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.60.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

